[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/easy_sheet_manager/scripts/ImprovedList.gd" type="Script" id=1]
[ext_resource path="res://addons/easy_sheet_manager/scripts/Manager.gd" type="Script" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends ItemList


var initial_pos
func _enter_tree():
	initial_pos = rect_position



func _on_ActionList_visibility_changed():
	if !visible: rect_position = initial_pos
	print(\"changed\")
	pass # Replace with function body.
"

[node name="Manager" type="WindowDialog"]
anchor_left = 0.0742188
anchor_top = 0.113333
anchor_right = 0.921875
anchor_bottom = 0.895
window_title = "Easy Sheet Manager"
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 0.859
anchor_bottom = 0.936
margin_right = 0.388
margin_bottom = 0.0158081
follow_focus = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ScrollContainer"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.864055
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -6.10352e-05
select_mode = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ActionList" type="ItemList" parent="."]
visible = false
anchor_left = 1.019
anchor_top = -0.085
anchor_right = 1.019
anchor_bottom = -0.085
margin_left = -71.492
margin_top = 121.865
margin_right = 50.508
margin_bottom = 150.865
items = [ "Clear Selection", null, false ]
allow_reselect = true
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimPanel" type="Panel" parent="."]
anchor_top = 0.946695
anchor_right = 0.862903
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="AnimPanel"]
anchor_left = 0.00370348
anchor_top = 0.0887622
anchor_right = 0.190619
anchor_bottom = 1.00876
text = "Animation Sequence: "
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="lb_sequence" type="Label" parent="AnimPanel"]
anchor_left = 0.188251
anchor_top = 0.08
anchor_right = 0.81976
anchor_bottom = 1.0
text = "[]"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="bt_add_anim" type="Button" parent="AnimPanel"]
anchor_left = 0.832993
anchor_top = 0.117173
anchor_right = 0.997212
anchor_bottom = 0.917173
text = "Create Animation"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnimNameDialog" type="AcceptDialog" parent="."]
visible = true
anchor_left = 0.0495392
anchor_top = 0.147121
anchor_right = 0.412442
anchor_bottom = 0.607676
popup_exclusive = true
window_title = "Settings"
dialog_hide_on_ok = false
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="AnimNameDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cb_loop" type="CheckBox" parent="AnimNameDialog/VBoxContainer"]
margin_right = 299.0
margin_bottom = 24.0
pressed = true
text = "Loop"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="cb_inverse" type="CheckBox" parent="AnimNameDialog/VBoxContainer"]
margin_top = 28.0
margin_right = 299.0
margin_bottom = 52.0
hint_tooltip = "For example if your animation is [1,2,3,4], by enabling this option it will result in: [1,2,3,4,3,2]"
text = "Add Reverse at End"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="cb_first" type="CheckBox" parent="AnimNameDialog/VBoxContainer"]
margin_top = 56.0
margin_right = 299.0
margin_bottom = 80.0
hint_tooltip = "This option will add the first frame at the end of the animation, example: [1,2,3] will result in: [1,2,3,1]"
text = "Add First Frame at End"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="AnimNameDialog/VBoxContainer"]
margin_top = 84.0
margin_right = 299.0
margin_bottom = 98.0
text = "Space between frames:"

[node name="SpinBox" type="SpinBox" parent="AnimNameDialog/VBoxContainer"]
margin_top = 102.0
margin_right = 299.0
margin_bottom = 126.0
min_value = 0.001
step = 0.01
value = 0.1
allow_greater = true

[node name="Label2" type="Label" parent="AnimNameDialog/VBoxContainer"]
margin_top = 130.0
margin_right = 299.0
margin_bottom = 144.0
text = "Animation name:"

[node name="Name" type="LineEdit" parent="AnimNameDialog/VBoxContainer"]
margin_top = 148.0
margin_right = 299.0
margin_bottom = 172.0
max_length = 25
placeholder_text = "MyCustomAnimation"
placeholder_alpha = 0.288
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="popup_hide" from="." to="." method="_on_Manager_popup_hide"]
[connection signal="multi_selected" from="ItemList" to="." method="_on_ItemList_multi_selected"]
[connection signal="item_selected" from="ActionList" to="." method="_on_ActionList_item_selected"]
[connection signal="mouse_exited" from="ActionList" to="." method="_on_ActionList_mouse_exited"]
[connection signal="visibility_changed" from="ActionList" to="ActionList" method="_on_ActionList_visibility_changed"]
[connection signal="pressed" from="AnimPanel/bt_add_anim" to="." method="_on_bt_add_anim_pressed"]
[connection signal="confirmed" from="AnimNameDialog" to="." method="_on_AnimNameDialog_confirmed"]
